<resources>
    <string name="app_name">What\'s up ?</string>
    <string name="app_name_no_w">hat\'s up ?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_reminder_list">Reminders</string>
    <string name="title_activity_entry_list">What\'s up ?</string>
    <string name="title_activity_entry_add">What\'ve you been up to?</string>

    <!--General-->
    <string name="ok">OK</string>
    <string name="do_it">Do it!</string>
    <string name="all_done">All done</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="input_content_hint">Saving the galaxy, drinking coffee…</string>
    <string name="dunno_smiley">¯\\_(ツ)_/¯</string>
    <string name="version_format">Version %s</string>
    <string name="days">days</string>
    <string name="danger">Danger</string>
    <string name="no_entry">No entry to display</string>
    <string name="great_success">Great success!</string>
    <string name="failure">Failure</string>

    <!--Menus-->
    <string name="menu_item_reminders">Reminders</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_quit">Quit</string>

    <!--Settings related-->
    <string name="preferences_filename">com.dancing_koala.whathaveyoubeenupto.PREFERENCES_FILE</string>
    <string name="settings_title_working_days">Working days</string>
    <string name="settings_title_reminders">Reminders</string>
    <string name="settings_title_danger_zone">Danger zone</string>
    <string name="settings_title_general">General</string>
    <string name="setting_entry_lifespan_label">Delete an entry after</string>
    <string name="settings_delete_all_label">Delete all</string>
    <string name="settings_delete_all_confirm_msg">Do you really want to delete all entries?</string>

    <!--DateTime related-->
    <string name="default_date_format">MM/dd/yyyy</string>
    <string name="time_not_defined">88:88</string>

    <!--Days of week-->
    <string name="dow_monday">Monday</string>
    <string name="dow_tuesday">Tuesday</string>
    <string name="dow_wednesday">Wednesday</string>
    <string name="dow_thursday">Thursday</string>
    <string name="dow_friday">Friday</string>
    <string name="dow_saturday">Saturday</string>
    <string name="dow_sunday">Sunday</string>

    <string name="dow_monday_abbr">M</string>
    <string name="dow_tuesday_abbr">Tu</string>
    <string name="dow_wednesday_abbr">W</string>
    <string name="dow_thursday_abbr">Th</string>
    <string name="dow_friday_abbr">F</string>
    <string name="dow_saturday_abbr">Sa</string>
    <string name="dow_sunday_abbr">Su</string>
    <string name="label_today">Today</string>
    <string name="label_yesterday">Yesterday</string>

    <!--Notifications-->
    <string name="notification_content">Tell me about it!</string>
    <string-array name="notification_heroic_acts">
        <item>Saved the galaxy?</item>
        <item>Saved the galaxy? Again?</item>
        <item>Finally wrote your own book?</item>
        <item>Passed your final exam?</item>
        <item>Eventually caught\'em all?</item>
        <item>Broke the coffee drinking world record?</item>
        <item>Managed to get out of bed?</item>
        <item>Got a royal flush playing poker?</item>
        <item>Won a scrabble game?</item>
        <item>Managed to avoid the last Windows update?</item>
        <item>Worked too much?</item>
        <item>Smashed a terrifying spider?</item>
        <item>Successfully avoided Trump\'s last tweets?</item>
    </string-array>
</resources>
