<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dancing_koala.whathaveyoubeenupto.entry.EntryAddActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Dialog.Title.MarginBottom"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/Dialog.Title.PaddingBottom"
        android:paddingLeft="@dimen/Dialog.ContentArea.Padding"
        android:paddingRight="@dimen/Dialog.ContentArea.Padding"
        android:paddingTop="@dimen/Dialog.ContentArea.Padding"
        android:text="@string/title_activity_entry_add"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/Entry.Content.Input.Height"
        android:layout_marginLeft="@dimen/Dialog.ContentArea.Padding"
        android:layout_marginRight="@dimen/Dialog.ContentArea.Padding"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/Entry.Content.Input.Padding">

        <EditText
            android:id="@+id/entry_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/input_content_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:textColor="@color/colorFontPrimary" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/Dialog.ActionArea.Height"
        android:gravity="right"
        android:padding="@dimen/Dialog.ActionArea.Padding">

        <TextView
            android:id="@+id/negative_button"
            style="@style/AppTheme.AlertDialog.Action"
            android:layout_marginRight="@dimen/Dialog.Action.Spacing"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/positive_button"
            style="@style/AppTheme.AlertDialog.Action"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>
